@@ -1,0 +1,24 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Form Tests</title>
+  </head>
+
+  <body>
+    <h1>Form Tests</h1>
+
+<ol>
+<:datacomp testurls testurls.pydcmp uri=`CONNECTION.uri`:>
+<pre><:val `testurls`:></pre>
+<:for `testurls` turl:>
+<li><:url `turl` text=`turl`:></li>
+<:/for:>
+</ol>
+    <hr>
+    <address><a href="mailto:smulloni@smullbola.smullyan.org"></a></address>
+<!-- Created: Mon Nov 18 09:07:33 EST 2002 -->
+<!-- hhmts start -->
+Last modified: Mon Nov 18 09:22:36 EST 2002
+<!-- hhmts end -->
+  </body>
+</html>
