@@ -1,0 +1,19 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+  <head>
+    <title>Form Test One</title>
+  </head>
+
+  <body>
+    <:include test1.pyinc:>
+
+
+
+    <hr>
+    <address><a href="mailto:smulloni@smullbola.smullyan.org"></a></address>
+<!-- Created: Mon Nov 18 09:17:31 EST 2002 -->
+<!-- hhmts start -->
+Last modified: Mon Nov 18 09:26:39 EST 2002
+<!-- hhmts end -->
+  </body>
+</html>
